Refactor how UseCounter::SyntheticKeyframesInCompositedCSSAnimation is counted

This patch rewrites the detection logic for composited animations that
have neutral keyframes.

The previous code was relatively expensive and failed a DCHECK when
custom properties were used. This patch moves the use counting down into
where we actually handle compositing neutral keyframes.

BUG=679994

Review-Url: https://codereview.chromium.org/2620303002
Cr-Commit-Position: refs/heads/master@{#443180}

Former-commit-id: 2d136863c16220ecc767607d4615624168d99212